// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maps state and dispatch to props 1`] = `
Object {
  "active": false,
  "name": "Dohlášeni",
  "onClick": [Function],
}
`;

exports[`maps state and dispatch to props 2`] = `
Object {
  "active": true,
  "name": "Přihlášeni",
  "onClick": [Function],
}
`;

exports[`maps state and dispatch to props 3`] = `
Array [
  Object {
    "akceMenu": Object {
      "id": "9ccbc71dedc1e99b7e1d671",
      "nejakaPoznamka": false,
      "onHide": [Function],
      "onShow": [Function],
      "showing": false,
    },
    "datum": 2020-05-12T00:00:00.000Z,
    "email": "pul.ka@s.cz",
    "id": "9ccbc71dedc1e99b7e1d671",
    "jmeno": "Božena",
    "kategorie": Object {
      "id": "5a587e1b051c181132cf83d9",
      "pohlavi": "žena",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 39,
        "min": 18,
      },
    },
    "kod": "abc023skd204mvs345",
    "narozeni": Object {
      "den": 25,
      "mesic": 7,
      "rok": 2001,
    },
    "obec": "Velhartice",
    "pohlavi": "žena",
    "predepsano": 350,
    "prijmeni": "Půlmaratonka",
    "startCislo": 8,
    "zaplaceno": 0,
  },
  Object {
    "akceMenu": Object {
      "id": "f5c88400190a4bed88c76736",
      "nejakaPoznamka": false,
      "onHide": [Function],
      "onShow": [Function],
      "showing": false,
    },
    "datum": 2020-05-17T00:00:00.000Z,
    "email": "",
    "id": "f5c88400190a4bed88c76736",
    "jmeno": "Josef",
    "kategorie": Object {
      "id": "5a587e1a051c181132cf83b8",
      "pohlavi": "muž",
      "typ": "maraton",
      "vek": Object {
        "max": 39,
        "min": 18,
      },
    },
    "kod": "rcc023skd204mvs345",
    "narozeni": Object {
      "den": 25,
      "mesic": 7,
      "rok": 2001,
    },
    "obec": "Králův Dvůr",
    "pohlavi": "muž",
    "predepsano": 250,
    "prijmeni": "Smalt",
    "startCislo": 15,
    "zaplaceno": 250,
  },
  Object {
    "akceMenu": Object {
      "id": "7a09b1fd371dec1e99b7e142",
      "nejakaPoznamka": true,
      "onHide": [Function],
      "onShow": [Function],
      "showing": false,
    },
    "datum": 2020-05-12T00:00:00.000Z,
    "email": "zrala.kl@s.cz",
    "id": "7a09b1fd371dec1e99b7e142",
    "jmeno": "Hana",
    "kategorie": Object {
      "id": "5a587e1b051c181132cf83d9",
      "pohlavi": "žena",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 39,
        "min": 18,
      },
    },
    "kod": "abc023skd204mvs345",
    "narozeni": Object {
      "den": 25,
      "mesic": 7,
      "rok": 1999,
    },
    "obec": "Bučovice",
    "pohlavi": "žena",
    "predepsano": 350,
    "prijmeni": "Zralá",
    "startCislo": 10,
    "zaplaceno": 180,
  },
]
`;
